2008-05-01  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour.c:
	(clutter_behaviour_remove_all): Disconnect the ::destroy
	handler when removing all actors, to match the behaviour
	of clutter_behaviour_remove().

2008-05-01  Matthew Allum  <mallum@openedhand.com>

	* clutter/glx/clutter-glx-texture-pixmap.c:
	* tests/test-pixmap.c:
	Fix up texture-pixmap, now works. 
	Thanks to Neil for spotting we were actually using 
	wrong texture type in fbconfig (COGL change).

2008-04-30  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/cogl/gles/cogl-primitives.c: (_cogl_path_fill_nodes):
	keep track of direction we are drawing in and make sure we leave
	two intersection points when we have changed direction.

2008-04-30  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/cogl/gles/cogl-primitives.c: (_cogl_path_fill_nodes):
	scanline rasterizer fallback for GLES without working stencil
	buffer (would benefit from optimization/smarter choice of
	datastructures).

2008-04-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-effect.c:
	(clutter_effect_closure_destroy): Do not remove the actor
	from the behaviour; the behaviour is an internal detail of the
	effect, and it will remove the actors anyway when finalized
	when g_object_unref() is called. This should guard against
	actors being destroyed while an effect is running.

2008-04-30  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/cogl/common/Makefile.am:
	* clutter/cogl/common/cogl-primitives.c:
	* clutter/cogl/common/cogl-primitives.h:
	* clutter/cogl/gl/Makefile.am:
	* clutter/cogl/gl/cogl-primitives.c:
	* clutter/cogl/gl/cogl-primitives.h:
	* clutter/cogl/gles/Makefile.am:
	* clutter/cogl/gles/cogl-primitives.c:
	* clutter/cogl/gles/cogl-primitives.h: moved duplicated code to the
	common directory.

2008-04-30  Robert Bragg  <bob@openedhand.com>
	
	* clutter/clutter/x11/clutter-x11-texture-pixmap.c:
	In _update_area_real with depth=16 we weren't setting up the alpha
	channel.
